padding on mobile fixed

--- a/style.css
+++ b/style.css
@@ -169,8 +169,8 @@ footer {
 }
 
 #footer2 {
-  bottom: auto;
-  padding: 64px 0;
+  position: relative;
+  bottom: 100%;
   text-align: center;
   font-size: 32px;
 }
